# Prac_Python-Cpp-Connection

./: .gitignore  CMakeLists.txt  Utility.cmake
Prac_BoostPyhon/: CMakeLists.txt  README.md  main.cpp  simple.cpp
Prac_BoostPython_bjam/: Jamroot  hello.cpp
Prac_BoostPython_bjam/simple/: Jamfile  simple.cpp  test_simple.py
Prac_CallCppFromPython/: CMakeLists.txt  README.md  mysolver.cpp  setup.py
Prac_CallPythonFromCpp/: CMakeLists.txt  README.md  main.cpp
Prac_pybind11_embed01/: CMakeLists.txt  main.cpp
Prac_pybind11_extend01/: CMakeLists.txt  main.cpp
Prac_pybind11_extend02/: CMakeLists.txt  main.cpp
Prac_pybind11_extend03/: CMakeLists.txt  main.cpp  use_extend03.py
Prac_pybind11_extend04/: CMakeLists.txt  main.cpp
Prac_pybind11_extend05/: CMakeLists.txt  main.cpp  use_extend05.py
Prac_pybind11_extend06/: CMakeLists.txt  main.cpp  use_extend06.py
Prac_pybind11_extend07/: CMakeLists.txt  main.cpp  use_extend07.py
Prac_pybind11_extend08/: CMakeLists.txt  main.cpp  use_extend08.py
Prac_pybind11_extend09/: CMakeLists.txt  main.cpp  use_extend09.py
